# glsl-language-server

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
src/: includer.cpp  includer.hpp  main.cpp  messagebuffer.cpp  messagebuffer.hpp  symbols.cpp  symbols.hpp  utils.cpp  utils.hpp  workspace.cpp  workspace.hpp
